<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20sp"
            android:layout_marginRight="10sp"
            android:layout_marginLeft="10sp">

            <Spinner
                android:id="@+id/sources"
                android:layout_width="match_parent"
                android:layout_height="37sp" />

            <EditText
                android:id="@+id/hospitalClinicName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hospital_clinic_name"
                android:inputType="textPersonName"
                android:autofillHints="@string/todo" />

            <EditText
                android:id="@+id/contactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/contact_number"
                android:inputType="phone"
                android:autofillHints="@string/todo" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:autofillHints="@string/todo" />

            <Spinner
                android:id="@+id/cities"
                android:layout_width="match_parent"
                android:layout_height="37dp" />


            <EditText
                android:id="@+id/otherDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/other_details_like_price_delivery_etc"
                android:inputType="textPersonName"
                android:autofillHints="@string/todo" />

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/note_like_second_number_etc"
                android:inputType="textPersonName"
                android:autofillHints="@string/todo" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:backgroundTint="#689F38"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:focusable="true"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>